# lux-editor

./: ARCHITECTURE.md  Cargo.toml  JOURNEY.md  LICENSE  README.md  flake.nix  test.txt
src/: app.rs  buffer.rs  cursor.rs  input.rs  lib.rs  main.rs  renderer.rs
src/editor/: mod.rs  mode.rs  selection.rs  tests.rs
src/history/: mod.rs
src/lsp/: client.rs  json.rs  mod.rs  protocol.rs  transport.rs
src/rope/: mod.rs  tests.rs
src/syntax/: mod.rs  tests.rs
src/text/: buffer.rs  edit.rs  mod.rs  position.rs
src/ui/: mod.rs  renderer.rs  theme.rs
tests/: editing_session.rs
