[package]
name = "lux"
version = "0.1.0"
edition = "2024"
description = "A modal, Helix-inspired terminal text editor written from scratch in Rust"
repository = "https://github.com/lucasly-ba/lux"
readme = "README.md"

# Library + binary split: the library holds all the editor logic so it can be
# unit- and integration-tested, while the binary is a thin wrapper that wires
# up the terminal and runs the event loop.
[lib]
name = "lux"
path = "src/lib.rs"

[[bin]]
name = "lux"
path = "src/main.rs"

[dependencies]
crossterm = "0.26"
# Incremental parsing for syntax highlighting. tree-sitter is the same parser
# generator Helix, Neovim and (in spirit) Apple's tooling use; the grammar is
# real C compiled at build time, not a regex.
tree-sitter = "0.22"
tree-sitter-rust = "0.21"

[profile.release]
lto = true
codegen-units = 1
